--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/jetstream": "^4.1",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.0"
+        "livewire/livewire": "^3.0",
+        "spatie/ray": "^1.40"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
