--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "spatie/ray": "^1.40"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "laravel-shift/blueprint": "^2.9",
         "laravel/pint": "^1.0",
